--- a/_sass/components/_post.scss
+++ b/_sass/components/_post.scss
@@ -13,6 +13,7 @@
     border-bottom: 1px solid $action-color;
     //padding: modular-scale(-4);
     padding: 0 0 1em 0;
+    margin-bottom: 1em;
     @include grid-media($large) {
       display: flex;
       justify-content: space-between;
