--- a/_sass/base/_layout.scss
+++ b/_sass/base/_layout.scss
@@ -51,3 +51,16 @@ body {
     align-items: start;
   }
 }
+
+.flex-forty {
+  flex: 0 1 40%;
+}
+.flex-sixty {
+  flex: 0 1 60%;
+}
+.flex-fifty {
+  flex: 0 1 50%;
+}
+.flex-full {
+  flex: 0 1 100%;
+}
