Update backend image upload, update header image

--- a/_sass/base/_buttons.scss
+++ b/_sass/base/_buttons.scss
@@ -1,4 +1,4 @@
-$_button-background-color: $action-color;
+$_button-background-color: $highlight-color;
 $_button-background-color-hover: shade($action-color, 20%);
 
 #{$all-buttons} {
