--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -1,5 +1,5 @@
 // Google Fonts
-@import url(//fonts.googleapis.com/css?family=Roboto+Condensed|Lato:300,400);
+@import url(//fonts.googleapis.com/css?family=Roboto+Condensed|Lato:300,400|Changa+One);
 
 // Typography
 // $base-font-family: $font-stack-system;
@@ -8,7 +8,7 @@ $base-font-family: "Lato", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 $heading-font-family: ('Roboto Condensed', 'Helvetica Neue', 'Helvetica', 'verdana', 'Arial', sans-serif);
 $subheading-font-family: ('Roboto Condensed', 'Helvetica Neue', 'Helvetica', 'verdana', 'Arial', sans-serif);
 $site-title-font-family: $heading-font-family;
-$logo-font-family: $heading-font-family;
+$logo-font-family: ('Changa One', cursive);
 
 // Line height
 // Line height
