--- a/_sass/components/_page.scss
+++ b/_sass/components/_page.scss
@@ -18,7 +18,7 @@
    max-width: 48em;
    margin: 0 auto;
   @include grid-media ($small) {
-    padding: 1em;
+    //padding: 1em;
   }
 }
 .page--header {
