--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -19,7 +19,11 @@
     &:focus {
         outline: none;
     }
+    background: url(/assets/logo-header-bg.jpg) center top no-repeat black;
+    background-size: cover;
+    padding: 1em;
 }
+
 .header--logo {
 
 }
@@ -28,16 +32,16 @@
     align-self: center; // flex centered
 
     font-family: $logo-font-family;
-    color: $dark-gray;
-    text-transform: uppercase;
+    color: $white;
+    text-transform: none;
     text-decoration: none;
-    margin-top: 0;
+    margin-top: 3rem;
     margin-bottom: 1rem;
-
-    font-size: modular-scale(3);
+    text-shadow: 2px -4px 2px rgba($action-color, 0.8);
+    font-size: modular-scale(4);
 
     @include grid-media ($small) {
-        font-size: modular-scale(5);
+        font-size: modular-scale(6);
     }
 }
 
