--- a/_sass/layout/_navigation.scss
+++ b/_sass/layout/_navigation.scss
@@ -2,10 +2,11 @@
 // This file contains all styles related to the navigation
 // -----------------------------------------------------------------------------
 
+/* header is INSIDE navigation */
 .navigation {
     margin: 0;
-    padding: 1em 1em 0;
-    background-color: $white;
+    padding: 0;
+    //background-color: $white;
     z-index: 99; // to cover over flexslider
 }
 /// Nav menu
@@ -58,7 +59,7 @@ nav {
     clear: both;
     text-align: center;
     display: none;
-    margin: 0 auto;
+    margin: 1rem auto;
     overflow: visible;
     padding: 0;
     width: 100%;
