--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -11,10 +11,11 @@
         }
     }
     .scrim {
-        padding: 0 0 20em 0;
+        padding: 20em 0 0 0;
     }
     .gallery--front {
         padding: 0 1em 1em;
+        background: rgba(255,255,255,0.8);
     }
 
 }
